--- a/gb/21/6/26/n13049750.md
+++ b/gb/21/6/26/n13049750.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kggovc316/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kggovc316/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kggovc316/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kggovc316/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kggovc316/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kggovc316/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kggovc316/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kggovc316/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kggovc316/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kggovc316/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kggovc316/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kggovc316/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kggovc316/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kggovc316/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kggovc316/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kggovc316/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kggovc316/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kggovc316/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kggovc316/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kggovc316/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kggovc316/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kggovc316/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kggovc316/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kggovc316/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kggovc316/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kggovc316/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kggovc316/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kggovc316/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kggovc316/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kggovc316/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kggovc316/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kggovc316/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kggovc316/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kggovc316/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kggovc316/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kggovc316/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kggovc316/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kggovc316/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kggovc316/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kggovc316/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kggovc316/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kggovc316/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kggovc316/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kggovc316/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kggovc316/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kggovc316/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kggovc316/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>揭中共百年丑恶 红二代：这场革命根本是错的</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2013/02/1301311933371369-600x400.jpg" />
 <h6></h6>
 <hr>
-	<p>【大纪元2021年06月27日讯】“我的选择就是摒弃这一切。我拒绝接受你们的遗产。”<ahref="https://github.com/kggovc316/djy/blob/master/gb/tag/%E6%9D%8E%E6%B1%9F%E7%90%B3.md#1">李江琳</a>出身在一个红色家庭，但仍饱受中共历次运动冲击。近日她接受美国之音采访说，正是由于她成长的红色家庭所经历的巨大反差和震荡，让她意识到，“中国这个革命就应该全盘否定”。</p>
-<p>美国之音报导，<ahref="https://github.com/kggovc316/djy/blob/master/gb/tag/%E6%9D%8E%E6%B1%9F%E7%90%B3.md#1">李江琳</a>童年时享受着革命家庭的特权，认为革命就是天经地义。直到文革爆发，父亲被打成走资派，10岁的她被老师逼着和家庭划清界限，后随母亲下乡，一家人天各一方，再聚首已是70年代中期。</p>
+	<p>【大纪元2021年06月27日讯】“我的选择就是摒弃这一切。我拒绝接受你们的遗产。”<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9D%8E%E6%B1%9F%E7%90%B3.md#1">李江琳</a>出身在一个红色家庭，但仍饱受中共历次运动冲击。近日她接受美国之音采访说，正是由于她成长的红色家庭所经历的巨大反差和震荡，让她意识到，“中国这个革命就应该全盘否定”。</p>
+<p>美国之音报导，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9D%8E%E6%B1%9F%E7%90%B3.md#1">李江琳</a>童年时享受着革命家庭的特权，认为革命就是天经地义。直到文革爆发，父亲被打成走资派，10岁的她被老师逼着和家庭划清界限，后随母亲下乡，一家人天各一方，再聚首已是70年代中期。</p>
 <p>她的父亲1940年就加入中国共产党，但是“他在反右期间有一点抗上，拒绝在他们单位里打出5%的右派，大概跟这个有关，最后他就一直没有提上去”。她说，“我从父亲那里学到的是他内在有一种傲骨，不提拔就不提拔，所以他在文革中也被整得很惨。”</p>
 <p>李江琳来到乡下，农村的贫穷让她非常震惊，她说，“由于天生张扬的个性，在那时候被压制得非常厉害，动不动就被全校批斗，都成常事儿了。”</p>
 <p>她开始从一个“傻乎乎的小姑娘”不得不去思考父辈打江山的意义所在。多年来的痛苦思考、文献收集，与历史见证者的对谈，不断冲刷着那个红色家庭在她身上的烙印，一步步使她变成一个全新的人。</p>
@@ -29,52 +29,46 @@
 <p>“这种对精英的控制从反右开始到现在也是一样的，要么收买，如果收买不了，不服的，就是找一个罪名抓起来枪毙。它没有改变，完全没有改变。”</p>
 <h3>母亲这一代被系统洗脑 “我拒绝接受你们的遗产”</h3>
 <p>公开资料显示，李江琳1982年获得复旦大学英文系学士，1988年获山东大学美国文学研究所硕士学位，1988年留学美国，获布兰戴斯大学犹太历史硕士和纽约皇后学院图书馆学硕士。</p>
-<p>李江琳说，她的母亲始终不理解，她为什么会成这样，“我一度也想使她理解，这个革命是错的。但是在我看来，他们已经不可能走出他们的思维。”</p>
+<p>李江琳说，她的母亲始终不理解，她（女儿）为什么会成这样，“我一度也想使她理解，这个革命是错的。但是在我看来，他们已经不可能走出他们的思维。”</p>
 <p>“我妈妈18岁就加入了中共。他们进入了这个体制、这个系统之后，被系统地洗脑，洗得极其彻底。然后她发现，这个组织是她的一切，不止是物质来源，也是精神来源。当组织不给你一个指导、一个命令、一个纲领，他们就无所适从，不知道怎么做。她现在已经90岁了，她一生没有任何其它思维的可能性。”</p>
 <p>李江琳说，“我妈妈晚年的时候到美国来过，在我这里待了8个月的时间，每天都要看新闻联播。当然我也会给她看一些其它的东西。她会对有些东西有一些思考，但是这个思考是不能离开她这个格局的，后来我也完全理解。”</p>
 <p>“但是我只能说，这不是我的路”，她说，“我的选择就是摒弃这一切。我拒绝接受你们的遗产。”</p>
 <p>现已居住在美国的李江琳，在海外出版《1959拉萨！——达赖喇嘛如何出走》、《铁鸟在天空飞翔：1956—1962青藏高原上的秘密战争》、《藏区秘行》等多部作品，后被中共当局禁止入境。</p>
-<p>责任编辑：孙芸#</p>
+<p>责任编辑：孙芸#◇</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/kggovc316/djy/blob/master/gb/13/10/17/n3988461.md#1">李江琳：当草原上老鼠消失的时候</a></li>
-<li><a href="https://github.com/kggovc316/djy/blob/master/gb/14/9/21/n4253935.md#1">李江琳：今日香港，当年西藏</a></li>
-<li><a href="https://github.com/kggovc316/djy/blob/master/gb/14/12/23/n4324651.md#1">李江琳：佛国归来之后</a></li>
-<li><a href="https://github.com/kggovc316/djy/blob/master/gb/20/5/25/n12135829.md#1">李江琳：中国人的仇美情绪从何而来</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/10/17/n3988461.md#1">李江琳：当草原上老鼠消失的时候</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/9/21/n4253935.md#1">李江琳：今日香港，当年西藏</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/12/23/n4324651.md#1">李江琳：佛国归来之后</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/5/25/n12135829.md#1">李江琳：中国人的仇美情绪从何而来</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/kggovc316/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/5/n10280071.md#1" target="_blank">路目：孔子诛杀少正卯 惹恼了谁？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11488843.md#1" target="_blank">34国法轮功学员欧洲集会游行 英议员声援</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/11/n11446216.md#1" target="_blank">夏祷：2019火种：天象巨变（2）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/11/26/n3738443.md#1" target="_blank">云帆：一水之隔　云泥之别</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/kggovc316/djy/blob/master/gb/21/6/18/n13031032.md#1">神机妙算的孔明 面临成败生死如何看天意？</a></li>
-<li><a href="https://github.com/kggovc316/djy/blob/master/gb/21/6/13/n13019873.md#1">【忽必烈传】南宋气数尽 蒙元攻下襄樊</a></li>
-<li><a href="https://github.com/kggovc316/djy/blob/master/gb/21/6/16/n13026383.md#1">出入冥界神界看到过去未来事  他们捎给人什么讯息？</a></li>
-<li><a href="https://github.com/kggovc316/djy/blob/master/gb/21/6/24/n13045083.md#1">【未解之谜】西藏的神秘现象（1） 转世灵童</a></li>
-<li><a href="https://github.com/kggovc316/djy/blob/master/gb/21/6/2/n12994331.md#1">【水浒传奇】谁看懂了上天的告诫</a></li>
-<li><a href="https://github.com/kggovc316/djy/blob/master/gb/21/6/25/n13047941.md#1">【重播】美智库中国透明度报告 对抗中共威胁</a></li>
-<li><a href="https://github.com/kggovc316/djy/blob/master/gb/21/6/25/n13048344.md#1">【秦鹏直播】抵制无效！Nike财报远超预期</a></li>
-<li><a href="https://github.com/kggovc316/djy/blob/master/gb/21/6/24/n13044183.md#1">【珍言真语】陈朗昇：国安法下港媒生存困境</a></li>
-<li><a href="https://github.com/kggovc316/djy/blob/master/gb/21/6/23/n13042993.md#1">【探索时分】中美舰载机歼15vsF18 谁胜算？</a></li>
-<li><a href="https://github.com/kggovc316/djy/blob/master/gb/21/6/17/n13029449.md#1">打辉瑞、莫德纳疫苗出现心脏问题？警惕3症状</a></li>
-<li><a href="https://github.com/kggovc316/djy/blob/master/gb/21/6/23/n13043091.md#1">【新闻看点】中国疫苗爆无效 董经纬事件美发话</a></li>
-<li><a href="https://github.com/kggovc316/djy/blob/master/gb/21/6/24/n13045511.md#1">杜汶泽聘用《苹果》失业员工 港人直呼感动</a></li>
-<li><a href="https://github.com/kggovc316/djy/blob/master/gb/21/6/25/n13046498.md#1">SEVENTEEN迷你八辑 创2021年最高首周销量纪录</a></li>
-<li><a href="https://github.com/kggovc316/djy/blob/master/gb/21/6/23/n13042921.md#1">被节目测体重仅45公斤 杨颖惊人饭量引热议</a></li>
-<li><a href="https://github.com/kggovc316/djy/blob/master/gb/21/6/24/n13043954.md#1">《变形金刚：万兽崛起》柯博文、大黄蜂回归</a></li>
-<li><a href="https://github.com/kggovc316/djy/blob/master/gb/21/6/23/n13042428.md#1">贾永婕曝子瑜捐PAPR助台湾抗疫：她的生日愿望</a></li>
-<li><a href="https://github.com/kggovc316/djy/blob/master/gb/21/6/17/n13029449.md#1">打辉瑞、莫德纳疫苗出现心脏问题？警惕3症状</a></li>
-<li><a href="https://github.com/kggovc316/djy/blob/master/gb/21/6/23/n13042201.md#1">打疫苗后现死亡案例？医师：2种情况暂缓施打</a></li>
-<li><a href="https://github.com/kggovc316/djy/blob/master/gb/21/6/23/n13042990.md#1">2种食物是“天然补血剂” 这样吃效果最好</a></li>
-<li><a href="https://github.com/kggovc316/djy/blob/master/gb/21/6/24/n13044254.md#1">日本小学生意外跟野熊道早安 熊被吓跑了</a></li>
-<li><a href="https://github.com/kggovc316/djy/blob/master/gb/21/6/24/n13043909.md#1">会飞的蓝色光球？ 英女拍到罕见的球状闪电</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11947742.md#1">梁朝伟拍陆片《猎狐行动》搭档女主确诊染疫</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kggovc316/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kggovc316/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/6/26/n13049750.htm">揭中共百年丑恶 红二代：这场革命根本是错的</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/6/26/n13049750.htm">揭中共百年丑恶 红二代：这场革命根本是错的</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kggovc316/djy/blob/master/gb/21/6/26/n13049750.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kggovc316/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kggovc316/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kggovc316/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kggovc316/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kggovc316/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kggovc316/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kggovc316/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kggovc316/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kggovc316/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kggovc316/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kggovc316/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kggovc316/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kggovc316/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kggovc316/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kggovc316/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kggovc316/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kggovc316/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kggovc316/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kggovc316/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kggovc316/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kggovc316/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kggovc316/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kggovc316/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kggovc316/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kggovc316/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kggovc316/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kggovc316/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kggovc316/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kggovc316/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kggovc316/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kggovc316/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kggovc316/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kggovc316/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kggovc316/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kggovc316/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kggovc316/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kggovc316/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kggovc316/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kggovc316/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kggovc316/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kggovc316/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kggovc316/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kggovc316/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kggovc316/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kggovc316/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kggovc316/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kggovc316/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kggovc316/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/6/26/n13049750.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
